syntax = "proto3";

option go_package = "github.com/open-exam/open-exam-backend/exam-db-service/grpc-exam-db-service;grpc_exam_db_service";

import "shared.proto";

service ExamClientAccess {
    rpc checkValid (CheckValidRequest) returns (CheckValidResponse) {};
    rpc expireKeys (ExpireKeysRequest) returns (StandardValidResponse) {};
    rpc batchAddKeys (stream BatchAddKeysRequest) returns (StandardValidResponse) {};
}

service ExamService {
}

message CheckValidRequest {
    string id = 1;
}

message CheckValidResponse {
    bool status = 1;
    string userId = 2;
    string examId = 3;
    int64 open_at = 4;
    int64 closes_at = 5;
}

message ExpireKeysRequest {
    string examId = 1;
    uint64 expireTime = 2;
}

message BatchAddKeysRequest {
    string userId = 1;
    string examId = 2;
    uint64 expireTime = 3;
}